<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_activity_coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".GameActivity">

        <TextView android:id="@+id/current_player_name_textview"
            android:text="@string/sampletext"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <edu.msu.ahmedibr.connect4_team17.ConnectFourView
            android:id="@+id/connectFourView"
            android:layout_weight="4"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMoveDone"
                android:text="@string/done_btn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSurrender"
                android:text="@string/surrender_btn" />

            <Button
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undo_btn" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
